Allow query as identifier, and make input order stable again